# bm-metrics-etl

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  queries.md  start.sh
alembic/: env.py  script.py.mako
alembic/context/: ALEMBIC.md  context.md
alembic/versions/: 0001_initial.py  0002_remove_raw_json.py  0003_add_sync_metadata.py
app/: main.py
app/api/: backfill.py  health.py
app/clients/: botmaker_client.py  exceptions.py
app/core/: config.py  database.py  timestamp_manager.py
app/models/: __init__.py  agent.py  agent_metric.py  agent_performance.py  channel.py  queue.py  sync_metadata.py
app/services/: data_ingestion.py  etl_mapper.py
app/tasks/: backfill.py  scheduler.py  sync.py
app/tests/: conftest.py  test_auth.py  test_client.py  test_data_ingestion.py  test_etl_mapper.py  test_sync_with_timestamps.py  test_timestamp_manager.py
context/: api_documentation.md  models.md
