[tool.poetry]
name = "botmaker-orchestrator"
version = "0.1.0"
description = "Botmaker Data Orchestrator — ETL pipeline for Botmaker metrics"
authors = ["dev"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115"
uvicorn = {version = "^0.34", extras = ["standard"]}
sqlalchemy = {version = "^2.0", extras = ["asyncio"]}
asyncpg = "^0.30"
alembic = "^1.14"
pydantic-settings = "^2.7"
apscheduler = "^3.11"
httpx = "^0.28"
python-dateutil = "^2.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.25"
aiosqlite = "^0.22.1"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
